[package]
name = "rlt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib" }
specs = { version = "^0", features = ["specs-derive"] }
specs-derive = "^0"
newtype_derive = "^0"
custom_derive = "^0"
num = "^0"
num-iter = "^0"
itertools = "^0"